# experiments-kubernetes

./: .gitattributes  .gitignore  .gitmodules  README.md  Tiltfile  docker-compose.standalone.yml  docker-compose.yml
commons-observability/: README.md  build.gradle  settings.gradle
consumer-service/: pom.xml
dashboard/: Dockerfile  README.md  app.py  requirements.txt
demo-schema-versioning/: README.md  pyproject.toml
demo-schema-versioning/consumer/: Dockerfile  main.py  pyproject.toml
demo-schema-versioning/consumer/handlers/: __init__.py  _template.py  v1.py  v2.py  v3.py
demo-schema-versioning/gui/: .requirements.txt  formutil.py  fs.py  kube.py  main.py  pyproject.toml  stats.py  ui.py
demo-schema-versioning/gui/routes/: consumer.py  flow.py  producer.py
demo-schema-versioning/k8s/broker/: broker.yaml  config.yaml
demo-schema-versioning/k8s/namespace/: namespace.yaml
demo-schema-versioning/k8s/producer/: deployment.yaml
demo-schema-versioning/k8s/redpanda/: deployment.yaml  service.yaml  topic-create-job.yaml
demo-schema-versioning/k8s/services/: consumer-v1.yaml  consumer-v2.yaml  consumer-v3.yaml
demo-schema-versioning/k8s/sources/: kafka-source.yaml
demo-schema-versioning/k8s/triggers/: trigger-v1.yaml  trigger-v2.yaml  trigger-v3.yaml
demo-schema-versioning/producer/: Dockerfile  main.py  pyproject.toml
demo-schema-versioning/producer/emitters/: __init__.py  v1.py  v2.py  v3.py
demo-schema-versioning/schemas/: __init__.py  registry.py  v1.py  v2.py  v3.py
k8s/: README.md  namespace.yaml
lowcode-scf/: Dockerfile  Makefile  (+5 more)
(+106 files in other folders)
