[project]
name = "demo-gui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "python-fasthtml>=0.6",
  "uvicorn[standard]>=0.30",
  "kubernetes>=30.1",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "watchfiles>=0.22",
]

[tool.ruff]
line-length = 110
target-version = "py312"
